clusters/cl01tl/manifests/ollama/HTTPRoute-http-route-ollama.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-ollama
  namespace: ollama
  labels:
    app.kubernetes.io/name: http-route-ollama
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/part-of: ollama
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - ollama.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: ollama-web
          port: 80
          weight: 100
